Doc/force-app/main/default/objects/SBQQ__RelatedContent__c/fields/Document_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Name_Link__c</fullName>
    <formula>IF(
  OR(
    LEFT(SBQQ__ExternalId__c, 3) = &quot;015&quot;,
    LEFT(SBQQ__ExternalId__c, 3) = &quot;00P&quot;
  ),
  HYPERLINK(
    &quot;/servlet/servlet.FileDownload?file=&quot; &amp; SBQQ__ExternalId__c,
    &quot;View Document&quot;
  ),
  IF(
    LEFT(SBQQ__ExternalId__c, 3) = &quot;069&quot;,
    HYPERLINK(
      &quot;/lightning/r/ContentDocument/&quot; &amp; SBQQ__ExternalId__c &amp; &quot;/view&quot;,
      &quot;View Document&quot;
    ),
    &quot;Invalid Document ID&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Name Link</label>
    <type>Text</type>
</CustomField>