Doc/force-app/main/default/objects/SBQQ__RelatedContent__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Created as part of BIZ-65215</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Type</valueSetName>
    </valueSet>
</CustomField>