Doc/force-app/main/default/objects/SBQQ__RelatedContent__c/fields/OP4I_Document_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Document_Full_Name__c</fullName>
    <description>BIZ-62166</description>
    <label>OP4I Document Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>